documentation addition :memo:
